[package]
name = "terrars-hashicorp-local"
edition = "2021"
version = "0.1.4"
description = "Pre-generated Terrars Local bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-hashicorp-local"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.3"

[features]
data_file = []
data_sensitive_file = []
file = []
sensitive_file = []
